# x402-openai-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE-MIT  Makefile  README.md  pyproject.toml
.github/workflows/: pre-commit-autoupdate.yml  python.yml  python_publish.yml  stale.yml
examples/: chat.py  chat_evm.py  chat_evm_mnemonic.py  chat_evm_policy.py  chat_mnemonic.py  chat_mnemonic_derivation.py  chat_multichain.py  chat_multichain_policy.py  chat_svm.py  models.py  models_mnemonic.py  multichain.py  streaming.py  streaming_evm.py  streaming_evm_mnemonic.py  streaming_evm_policy.py  streaming_svm.py
src/x402_openai/: __init__.py  _cli.py  _client.py  _http.py  _mcp.py  _transport.py  _wallet.py
src/x402_openai/wallets/: __init__.py  _base.py  _evm.py  _svm.py
tests/: test_http.py  test_mcp.py  test_transport.py  test_wallet_factory.py  test_wallets.py
